// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBadge auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      style="display: flex; align-items: center;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        style="margin-left: 1em; display: flex; flex-direction: column;"
      >
        <div
          style="display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-inline"
          >
            Joe Doe
          </h5>
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-inline"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      style="display: flex; align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        style="margin-left: 1em; display: flex; flex-direction: column;"
      >
        <div
          style="display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-inline"
          >
            Joe Doe
          </h5>
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-inline"
          />
        </div>
        <div
          style="display: block;"
        >
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
          >
            QA tester
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge invert render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      style="display: flex; align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        style="margin-left: 1em; display: flex; flex-direction: column;"
      >
        <div
          style="display: block;"
        >
          <h5
            class="MuiTypography-root Typography-invert Typography-semibold MuiTypography-h5 MuiTypography-inline"
          >
            Joe Doe
          </h5>
          <p
            class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 MuiTypography-inline"
          />
        </div>
        <div
          style="display: block;"
        >
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
          >
            QA tester
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge manual center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      style="display: flex; align-items: center;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        style="margin-left: 1em; display: flex; flex-direction: column;"
      >
        <div
          style="display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-inline"
          >
            Joe Doe
          </h5>
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-inline"
          />
        </div>
        <div
          style="display: block;"
        >
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
          >
            QA tester
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge override auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      style="display: flex; align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-xsmall"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        style="margin-left: 1em; display: flex; flex-direction: column;"
      >
        <div
          style="display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-inline"
          >
            Joe Doe
          </h5>
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-inline"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge small size 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      style="display: flex; align-items: flex-start;"
    >
      <div
        class="Avatar-root Avatar-small"
      >
        <div
          class="Avatar-textContainer Avatar-square Avatar-small Avatar-clippedCorner"
        />
        <p
          class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 Avatar-text"
        >
          JD
        </p>
      </div>
      <div
        style="margin-left: 1em; display: flex; flex-direction: column;"
      >
        <div
          style="display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-inline"
          >
            Joe Doe
          </h5>
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-inline"
          />
        </div>
        <div
          style="display: block;"
        >
          <p
            class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1"
          >
            QA tester
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
